tests/ui/missing_try_body.stderr
error: `try` requires a body: `try { ... }`
 --> tests/ui/missing_try_body.rs:7:9
  |
7 |         try
  |         ^^^
